# dikshas-fitness-studio

./: .gitignore  Dockerfile  LICENSE  Makefile  Procfile  README.md  TODO.txt  build.sh  pyproject.toml  requirements.txt  singleObject.py  vercel.json
.github/: SECURITY.md
.github/workflows/: django.yml
DOCUMENTATION/: DB.schema
documentation/: Backend.pptx  Dynamic Portfolio Website (Backend Module).pptx
src/: db.sqlite3  manage.py
src/User_Management/: admin.py  apps.py  models.py
src/User_Management/migrations/: 0001_initial.py  0002_user_management_address_user_management_batch_time_and_more.py  0003_alter_user_management_blood_group.py
src/classes/: admin.py  apps.py  models.py
src/classes/migrations/: 0001_initial.py  0002_classinfo_class_img.py  0003_alter_classinfo_class_img.py  0004_alter_classinfo_class_img.py
src/dynamic/: admin.py  apps.py  models.py
src/dynamic/migrations/: 0001_initial.py  0002_remove_aboutpage_description_and_more.py  0003_hyperlinks.py  0004_archivements.py  0005_rename__archivements_archivements_archivements.py  0006_hyperlinks_linkdin_hyperlinks_twiter_and_more.py  0007_remove_hyperlinks_facebook_and_more.py  0008_alter_hyperlinks_link.py  0009_aboutpage_img.py  0010_inquirydetails_alter_aboutpage_img.py  (+3 more)
src/project/: jazzmin.py  settings.py  urls.py  views.py  wsgi.py
src/templates/: about.html  base.html  blog.html  classes-details.html  classes.html  contact.html  event-details.html  events.html  footer.html  header.html  home.html  index.html  single-blog.html  trainer-details.html  trainer.html
(+28 files in other folders)
