[tool.poetry]
name = "dikshas-fitness-studio"
version = "0.1.0"
description = "Landing page for Diksha's Fitness Studio"
authors = ["prathameshkhade <pkhade2865@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
pillow = "^10.3.0"
django-jazzmin = "^3.0.0"
gunicorn = "^22.0.0"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
vercel-storage = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
